@@ -10,7 +10,7 @@ server_config(dir = ".", host = "127.0.0.1", port, browser, daemon, interval = 1
 \arguments{
 \item{dir}{The root directory to serve.}
 
-\item{host}{A string that is a valid IPv4 address that is owned by this 
+\item{host}{A string that is a valid IPv4 address that is owned by this
 server, or \code{"0.0.0.0"} to listen on all IP addresses.}
 
 \item{port}{The TCP port number. If it is not explicitly set, the default
